@@ -14,7 +14,7 @@
 #include <qdialog.h>
 //Added by qt3to4:
 #include <Q3VBoxLayout>
-#include <Q3GridLayout>
+#include <QGridLayout>
 #include <Q3HBoxLayout>
 #include <QLabel>
 #include <QPoint>
@@ -24,7 +24,7 @@ class QCheckBox;
 class QTableWidget;
 class Q3VBoxLayout;
 class Q3HBoxLayout;
-class Q3GridLayout;
+class QGridLayout;
 class QLabel;
 class QLineEdit;
 class QPushButton;
