@@ -15,13 +15,13 @@
 #include <qstring.h>
 //Added by qt3to4:
 #include <Q3VBoxLayout>
-#include <Q3GridLayout>
+#include <QGridLayout>
 #include <Q3HBoxLayout>
 #include <QLabel>
 
 class Q3VBoxLayout;
 class Q3HBoxLayout;
-class Q3GridLayout;
+class QGridLayout;
 class QLabel;
 class QLineEdit;
 class QPushButton;
@@ -55,7 +55,7 @@ public:
 
 
 protected:
-    Q3GridLayout* NewDBDialogBaseLayout;
+    QGridLayout* NewDBDialogBaseLayout;
     Q3HBoxLayout* layout12;
 
 protected slots:
